--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 100%;
             padding: 0;
             margin: 0;
-            background: black;
+            background: white;
         }
     </style>
 </head>
