--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+	<div>Hello World</div>
     <div id="AndreaMosaic"></div>
     <script src="app/leaflet.js"></script>
     <script src="app/leafletzoom.js"></script>  
@@ -608,6 +609,6 @@
             mapOptions
             );
     </script>
-	<div>Hello</div>
+	
 </body>
 </html>
